# HFT-Core

./: .gitignore  CHANGE_HISTORY.md  CMakeLists.txt  PHASE2_SUMMARY.md  README.md  TRANSPORT_INTERFACE_SUMMARY.md  project_spec.md
config/: grafana-hft-system-metrics-dashboard.json  grafana-machine-status-dashboard.json  hft_alerts.yml  hft_config.conf  hft_grafana_dashboard.json  prometheus-grafana-cloud.yml
docs/: market_data_handler_architecture.md
documents/: Metrics.md
scripts/: build_and_test.sh  quick_test.sh  run_integration_test.sh  start_all_services.sh  start_core_services.sh  start_prometheus.sh  stop_services.sh
src/backtesting/: CMakeLists.txt  data_downloader.cpp  data_downloader.h  fill_simulator.cpp  fill_simulator.h  historical_data_player.cpp  historical_data_player.h  main.cpp
src/common/: config.cpp  config.h  cpu_affinity.cpp  cpu_affinity.h  hft_metrics.cpp  hft_metrics.h  high_res_timer.cpp  high_res_timer.h  logging.cpp  logging.h  message_types.cpp  message_types.h  metrics_aggregator.cpp  metrics_aggregator.h  metrics_collector.cpp  metrics_collector.h  metrics_publisher.cpp  metrics_publisher.h  order_book.cpp  order_book.h  prometheus_exporter.h  simple_transport_demo.cpp  simple_transport_demo.h  spmc_transport.cpp  spmc_transport.h  static_config.cpp  static_config.h  transport_example.cpp  transport_factory.cpp  transport_interface.h  zmq_transport.cpp  zmq_transport.h
src/control_api/: control_api.cpp  control_api.h  main.cpp
src/low_latency_logger/: low_latency_logger.cpp  low_latency_logger.h  main.cpp
src/market_data_handler/: alpaca_market_data.cpp  alpaca_market_data.h  main.cpp  market_data_handler.cpp  market_data_handler.h  pcap_reader.cpp  pcap_reader.h
src/order_gateway/: alpaca_client.cpp  alpaca_client.h  main.cpp  order_gateway.cpp  order_gateway.h
src/position_risk_service/: main.cpp  position_risk_service.cpp  position_risk_service.h
src/strategy_engine/: enhanced_strategies.cpp  enhanced_strategies.h  main.cpp  strategy_engine.cpp  strategy_engine.h
src/test/: integration_test.cpp  mock_data_generator.cpp  test_alpaca_websocket.cpp  test_backtesting_framework.cpp  test_config.cpp  test_logging.cpp  test_message_types.cpp
src/websocket_bridge/: main.cpp  websocket_bridge.cpp  websocket_bridge.h
